<resources>
    <string name="app_name">BioReino</string>
    <string name="imagem_do_cartao">Imagem do cartão</string>
    <string name="icone_da_aula">Icone da aula</string>
    <string name="descricao_logo_appbar">Logo BioReino da AppBar</string>
    <string name="descricao_menu">menu</string>
    <string name="seus_cursos">seus cursos</string>
    <string name="botao_mostrar_tudo">Mostrar tudo</string>
    <string name="ultimo_curso">último curso</string>
    <string name="folhas_secas">Folhas secas indicando que não há curso</string>
    <string name="ultimo_curso_continuar">Continuar de onde parou:</string>
    <string name="sessao_categoria_label">categorias p/ plano</string>
    <string name="spinner_descrição">Filtro por plano</string>
    <string name="nenhum_curso_iniciado">Nenhum curso foi\n iniciado 😢</string>

    <string-array name="categorias">
        <item>Kids</item>
        <item>Scholar</item>
        <item>Professional</item>
    </string-array>

    <string name="titulo_home">Home</string>
    <string name="titulo_conta">Conta</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_perfil">Perfil</string>
    <string name="imagem_do_curso">Imagem do curso</string>
    <string name="curso_sem_aulas">Este curso ainda não tem aulas 🙇</string>
    <string name="curso_sem_aula_sub">Aguarde o lançamento!</string>
    <string name="curso_sem_aula_titulo">Curso sem aulas…</string>
    <string name="categoria_sem_cursos">Categoria sem cursos… 🙇</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conteudo_do_app">Conteúdo do app</string>
    <string name="carregando_conteudo">Carregando conteúdo</string>

</resources>