<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item android:title="@string/menu_menu" >
            <menu>
                <item
                    android:id="@+id/menu_navigation_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/titulo_home" />
            </menu>
        </item>

        <item android:title="@string/menu_perfil" >
            <menu>
                <item
                    android:id="@+id/menu_navigation_conta"
                    android:icon="@drawable/ic_conta"
                    android:title="@string/titulo_conta" />
            </menu>
        </item>

    </group>



</menu>